--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -354,38 +354,38 @@ baiduPush: true
 # 使用到的前端库，可按需替换成对应的CDN地址，如果下面未指定具体的版本号，使用最新的版本即可.
 libs:
   css:
-    fontAwesome: /libs/awesome/css/all.css # V5.11.1
-    materialize: /libs/materialize/materialize.min.css # 1.0.0
-    aos: /libs/aos/aos.css
-    animate: /libs/animate/animate.min.css # V3.5.1
-    lightgallery: /libs/lightGallery/css/lightgallery.min.css # V1.6.11
-    aplayer: /libs/aplayer/APlayer.min.css
-    dplayer: /libs/dplayer/DPlayer.min.css
-    gitalk: /libs/gitalk/gitalk.css
-    jqcloud: /libs/jqcloud/jqcloud.css
-    tocbot: /libs/tocbot/tocbot.css
+    fontAwesome: /myblog/libs/awesome/css/all.css # V5.11.1
+    materialize: /myblog/libs/materialize/materialize.min.css # 1.0.0
+    aos: /myblog/libs/aos/aos.css
+    animate: /myblog/libs/animate/animate.min.css # V3.5.1
+    lightgallery: /myblog/libs/lightGallery/css/lightgallery.min.css # V1.6.11
+    aplayer: /myblog/libs/aplayer/APlayer.min.css
+    dplayer: /myblog/libs/dplayer/DPlayer.min.css
+    gitalk: /myblog/libs/gitalk/gitalk.css
+    jqcloud: /myblog/libs/jqcloud/jqcloud.css
+    tocbot: /myblog/libs/tocbot/tocbot.css
   js:
-    jquery: /libs/jquery/jquery.min.js
-    materialize: /libs/materialize/materialize.min.js # 1.0.0
-    masonry: /libs/masonry/masonry.pkgd.min.js # v4.0.0
-    aos: /libs/aos/aos.js
-    scrollProgress: /libs/scrollprogress/scrollProgress.min.js
-    lightgallery: /libs/lightGallery/js/lightgallery-all.min.js # V1.6.11
-    clicklove: /libs/others/clicklove.js
-    busuanzi: /libs/others/busuanzi.pure.mini.js
-    aplayer: /libs/aplayer/APlayer.min.js
-    dplayer: /libs/dplayer/DPlayer.min.js
-    crypto: /libs/cryptojs/crypto-js.min.js
-    echarts: /libs/echarts/echarts.min.js
-    gitalk: /libs/gitalk/gitalk.min.js
-    valine: /libs/valine/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js  默认为 /libs/valine/Valine.min.js
-    jqcloud: /libs/jqcloud/jqcloud-1.0.4.min.js
-    tocbot: /libs/tocbot/tocbot.min.js
-    canvas_nest: /libs/background/canvas-nest.js
-    ribbon: /libs/background/ribbon.min.js
-    ribbonRefresh: /libs/background/ribbon-refresh.min.js
-    ribbon_dynamic: /libs/background/ribbon-dynamic.js
-    instantpage: /libs/instantpage/instantpage.js
+    jquery: /myblog/libs/jquery/jquery.min.js
+    materialize: /myblog/libs/materialize/materialize.min.js # 1.0.0
+    masonry: /myblog/libs/masonry/masonry.pkgd.min.js # v4.0.0
+    aos: /myblog/libs/aos/aos.js
+    scrollProgress: /myblog/libs/scrollprogress/scrollProgress.min.js
+    lightgallery: /myblog/libs/lightGallery/js/lightgallery-all.min.js # V1.6.11
+    clicklove: /myblog/libs/others/clicklove.js
+    busuanzi: /myblog/libs/others/busuanzi.pure.mini.js
+    aplayer: /myblog/libs/aplayer/APlayer.min.js
+    dplayer: /myblog/libs/dplayer/DPlayer.min.js
+    crypto: /myblog/libs/cryptojs/crypto-js.min.js
+    echarts: /myblog/libs/echarts/echarts.min.js
+    gitalk: /myblog/libs/gitalk/gitalk.min.js
+    valine: /myblog/libs/valine/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js  默认为 /libs/valine/Valine.min.js
+    jqcloud: /myblog/libs/jqcloud/jqcloud-1.0.4.min.js
+    tocbot: /myblog/libs/tocbot/tocbot.min.js
+    canvas_nest: /myblog/libs/background/canvas-nest.js
+    ribbon: /myblog/libs/background/ribbon.min.js
+    ribbonRefresh: /myblog/libs/background/ribbon-refresh.min.js
+    ribbon_dynamic: /myblog/libs/background/ribbon-dynamic.js
+    instantpage: /myblog/libs/instantpage/instantpage.js
 
 # The post featured images that needs to be displayed when there is no image.
 # 无文章特色图片时需要显示的文章特色图片.
