--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 梧桐树下的蚂蚁洞
 subtitle: ''
 description: '毛健杰的个人站点'
 keywords: '个人站点,web,node,iot'
-author: Jason/健杰
+author: Jason_健杰
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
