--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -109,8 +109,8 @@ recommend:
 
 # Configure website favicon and LOGO
 # 配置网站favicon和网站LOGO
-favicon: /myblog/favicon.png
-logo: /myblog/medias/logo.png
+favicon: /favicon.png
+logo: /medias/logo.png
 
 # The configuration of the second button in the home banner,
 # including the display name of the button, the font awesome icon, and the hyperlink to the button.
@@ -155,8 +155,8 @@ code:
 reward:
   enable: false
   title: 你的赏识是我前进的动力
-  wechat: /myblog/medias/reward/wechat.png
-  alipay: /myblog/medias/reward/alipay.jpg
+  wechat: /medias/reward/wechat.png
+  alipay: /medias/reward/alipay.jpg
 
 # Whether to activate the copyright information of the blog and author when copying the post content.
 # minCharNumber: Approve copyright information by copying at least how many characters.
@@ -196,7 +196,7 @@ clicklove:
 # profile in about page, including avatars, career, and personal introductions.
 # 在”关于”页面中配置个人信息，包括头像、职业和个人介绍.
 profile:
-  avatar: /myblog/medias/avatar.jpg
+  avatar: /medias/avatar.jpg
   career: Software Engineer
   introduction: If you wish to succeed, you should use persistence as your good friend, experience as your reference, prudence as your brother and hope as your sentry.
 
@@ -253,9 +253,9 @@ mySkills:
 myGallery:
   enable: true
   data:
-    - /myblog/medias/featureimages/0.jpg
-    - /myblog/medias/featureimages/1.jpg
-    - /myblog/medias/featureimages/2.jpg
+    - /medias/featureimages/0.jpg
+    - /medias/featureimages/1.jpg
+    - /medias/featureimages/2.jpg
 
 # Whether to display post-calender in the `archive` page
 # 设置在归档页面中是否显示'文章日历'控件
@@ -307,7 +307,7 @@ valine:
   avatar: 'mm' # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
   pageSize: 10
   placeholder: 'just go go' # Comment Box placeholder
-  background: /myblog/medias/comment_bg.png
+  background: /medias/comment_bg.png
 
 # Whether to display fork me on github icon and link, default true, You can change it to your repo address
 # 配置是否在 header 中显示 fork me on github 的图标，默认为true，你可以修改为你的仓库地址.
@@ -354,66 +354,66 @@ baiduPush: true
 # 使用到的前端库，可按需替换成对应的CDN地址，如果下面未指定具体的版本号，使用最新的版本即可.
 libs:
   css:
-    fontAwesome: /myblog/libs/awesome/css/all.css # V5.11.1
-    materialize: /myblog/libs/materialize/materialize.min.css # 1.0.0
-    aos: /myblog/libs/aos/aos.css
-    animate: /myblog/libs/animate/animate.min.css # V3.5.1
-    lightgallery: /myblog/libs/lightGallery/css/lightgallery.min.css # V1.6.11
-    aplayer: /myblog/libs/aplayer/APlayer.min.css
-    dplayer: /myblog/libs/dplayer/DPlayer.min.css
-    gitalk: /myblog/libs/gitalk/gitalk.css
-    jqcloud: /myblog/libs/jqcloud/jqcloud.css
-    tocbot: /myblog/libs/tocbot/tocbot.css
+    fontAwesome: /libs/awesome/css/all.css # V5.11.1
+    materialize: /libs/materialize/materialize.min.css # 1.0.0
+    aos: /libs/aos/aos.css
+    animate: /libs/animate/animate.min.css # V3.5.1
+    lightgallery: /libs/lightGallery/css/lightgallery.min.css # V1.6.11
+    aplayer: /libs/aplayer/APlayer.min.css
+    dplayer: /libs/dplayer/DPlayer.min.css
+    gitalk: /libs/gitalk/gitalk.css
+    jqcloud: /libs/jqcloud/jqcloud.css
+    tocbot: /libs/tocbot/tocbot.css
   js:
-    jquery: /myblog/libs/jquery/jquery.min.js
-    materialize: /myblog/libs/materialize/materialize.min.js # 1.0.0
-    masonry: /myblog/libs/masonry/masonry.pkgd.min.js # v4.0.0
-    aos: /myblog/libs/aos/aos.js
-    scrollProgress: /myblog/libs/scrollprogress/scrollProgress.min.js
-    lightgallery: /myblog/libs/lightGallery/js/lightgallery-all.min.js # V1.6.11
-    clicklove: /myblog/libs/others/clicklove.js
-    busuanzi: /myblog/libs/others/busuanzi.pure.mini.js
-    aplayer: /myblog/libs/aplayer/APlayer.min.js
-    dplayer: /myblog/libs/dplayer/DPlayer.min.js
-    crypto: /myblog/libs/cryptojs/crypto-js.min.js
-    echarts: /myblog/libs/echarts/echarts.min.js
-    gitalk: /myblog/libs/gitalk/gitalk.min.js
-    valine: /myblog/libs/valine/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js  默认为 /libs/valine/Valine.min.js
-    jqcloud: /myblog/libs/jqcloud/jqcloud-1.0.4.min.js
-    tocbot: /myblog/libs/tocbot/tocbot.min.js
-    canvas_nest: /myblog/libs/background/canvas-nest.js
-    ribbon: /myblog/libs/background/ribbon.min.js
-    ribbonRefresh: /myblog/libs/background/ribbon-refresh.min.js
-    ribbon_dynamic: /myblog/libs/background/ribbon-dynamic.js
-    instantpage: /myblog/libs/instantpage/instantpage.js
+    jquery: /libs/jquery/jquery.min.js
+    materialize: /libs/materialize/materialize.min.js # 1.0.0
+    masonry: /libs/masonry/masonry.pkgd.min.js # v4.0.0
+    aos: /libs/aos/aos.js
+    scrollProgress: /libs/scrollprogress/scrollProgress.min.js
+    lightgallery: /libs/lightGallery/js/lightgallery-all.min.js # V1.6.11
+    clicklove: /libs/others/clicklove.js
+    busuanzi: /libs/others/busuanzi.pure.mini.js
+    aplayer: /libs/aplayer/APlayer.min.js
+    dplayer: /libs/dplayer/DPlayer.min.js
+    crypto: /libs/cryptojs/crypto-js.min.js
+    echarts: /libs/echarts/echarts.min.js
+    gitalk: /libs/gitalk/gitalk.min.js
+    valine: https://unpkg.com/valine/dist/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js  默认为 /libs/valine/Valine.min.js
+    jqcloud: /libs/jqcloud/jqcloud-1.0.4.min.js
+    tocbot: /libs/tocbot/tocbot.min.js
+    canvas_nest: /libs/background/canvas-nest.js
+    ribbon: /libs/background/ribbon.min.js
+    ribbonRefresh: /libs/background/ribbon-refresh.min.js
+    ribbon_dynamic: /libs/background/ribbon-dynamic.js
+    instantpage: /libs/instantpage/instantpage.js
 
 # The post featured images that needs to be displayed when there is no image.
 # 无文章特色图片时需要显示的文章特色图片.
 featureImages:
-- /myblog/medias/featureimages/0.jpg
-- /myblog/medias/featureimages/1.jpg
-- /myblog/medias/featureimages/2.jpg
-- /myblog/medias/featureimages/3.jpg
-- /myblog/medias/featureimages/4.jpg
-- /myblog/medias/featureimages/5.jpg
-- /myblog/medias/featureimages/6.jpg
-- /myblog/medias/featureimages/7.jpg
-- /myblog/medias/featureimages/8.jpg
-- /myblog/medias/featureimages/9.jpg
-- /myblog/medias/featureimages/10.jpg
-- /myblog/medias/featureimages/11.jpg
-- /myblog/medias/featureimages/12.jpg
-- /myblog/medias/featureimages/13.jpg
-- /myblog/medias/featureimages/14.jpg
-- /myblog/medias/featureimages/15.jpg
-- /myblog/medias/featureimages/16.jpg
-- /myblog/medias/featureimages/17.jpg
-- /myblog/medias/featureimages/18.jpg
-- /myblog/medias/featureimages/19.jpg
-- /myblog/medias/featureimages/20.jpg
-- /myblog/medias/featureimages/21.jpg
-- /myblog/medias/featureimages/22.jpg
-- /myblog/medias/featureimages/23.jpg
+- /medias/featureimages/0.jpg
+- /medias/featureimages/1.jpg
+- /medias/featureimages/2.jpg
+- /medias/featureimages/3.jpg
+- /medias/featureimages/4.jpg
+- /medias/featureimages/5.jpg
+- /medias/featureimages/6.jpg
+- /medias/featureimages/7.jpg
+- /medias/featureimages/8.jpg
+- /medias/featureimages/9.jpg
+- /medias/featureimages/10.jpg
+- /medias/featureimages/11.jpg
+- /medias/featureimages/12.jpg
+- /medias/featureimages/13.jpg
+- /medias/featureimages/14.jpg
+- /medias/featureimages/15.jpg
+- /medias/featureimages/16.jpg
+- /medias/featureimages/17.jpg
+- /medias/featureimages/18.jpg
+- /medias/featureimages/19.jpg
+- /medias/featureimages/20.jpg
+- /medias/featureimages/21.jpg
+- /medias/featureimages/22.jpg
+- /medias/featureimages/23.jpg
 
 # default configs that the default policy for every articles/posts
 # default 配置文章的默认转载规则
