--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 梧桐树下的蚂蚁洞
+title: Jason's blog
 subtitle: ''
-description: '毛健杰的个人站点'
-keywords: '个人站点,web,node,iot'
-author: Jason_健杰
-language: zh-CN
+description: ''
+keywords: 'web,node,iot'
+author: Jason
+language: en
 timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://jason-oo.github.io/
-root: //
+url: https://jason-oo.github.io
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -92,7 +92,7 @@ use_date_for_updated: false
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 12
+per_page: 10
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -104,9 +104,11 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-matery
+theme: hexo-theme-Chic
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/jason-oo/jason-oo.github.io
+  branch: master
